--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Express Contacts App</title>
+  <script src="scripts/index.js" defer></script>
 </head>
 
 <body>
   <h1>Hello world! 😀</h1>
+  <h2>My Contacts</h2>
+  <ul id="contacts-list">
+
+  </ul>
 </body>
 
 </html>
