--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,31 @@
 
 <body>
   <h1>Hello world! 😀</h1>
-  <h2>My Contacts</h2>
-  <ul id="contacts-list">
+  <section>
+    <h2>My Contacts</h2>
+    <ul id="contacts-list"></ul>
+  </section>
 
-  </ul>
+  <!-- 
+  <section>
+    <form method="POST" action="http://localhost:3000/api/contacts">
+      <h2>Add Contact</h2>
+      <div>
+        <label for="first">First Name</label>
+        <input type="text" id="first" name="first" />
+      </div>
+      <div>
+        <label for="last">Last Name</label>
+        <input type="text" id="last" name="last" />
+      </div>
+      <div>
+        <label for="email">Email</label>
+        <input type="text" id="email" name="email" />
+      </div>
+      <button>Submit</button>
+    </form>
+  </section>
+  -->
 </body>
 
 </html>
